# soundblaster-x-g6-cli

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.run/: build.run.xml  check build.run.xml  deploy (testpypi).run.xml  g6-cli (--claim-and-release, --recording-mic-recording-volume 100, --dry-run).run.xml  g6-cli (--help).run.xml  g6-cli (--reload-audio-services).run.xml  g6-cli (--set-bass Disabled).run.xml  g6-cli (--set-bass Enabled).run.xml  g6-cli (--set-bass-value 0).run.xml  g6-cli (--set-bass-value 100).run.xml  g6-cli (--set-bass-value 50).run.xml  g6-cli (--set-crystalizer Disabled).run.xml  g6-cli (--set-crystalizer Enabled).run.xml  g6-cli (--set-crystalizer-value 0).run.xml  g6-cli (--set-crystalizer-value 100).run.xml  g6-cli (--set-crystalizer-value 50).run.xml  g6-cli (--set-dialog-plus Disabled).run.xml  g6-cli (--set-dialog-plus Enabled).run.xml  g6-cli (--set-dialog-plus-value 0).run.xml  g6-cli (--set-dialog-plus-value 100).run.xml  g6-cli (--set-dialog-plus-value 50).run.xml  g6-cli (--set-output Headphones).run.xml  g6-cli (--set-output Headphones, --dry-run).run.xml  g6-cli (--set-output Speakers).run.xml  g6-cli (--set-output, --dry-run).run.xml  g6-cli (--set-output, --dry-run, --debug).run.xml  g6-cli (--set-smart-volume Disabled).run.xml  g6-cli (--set-smart-volume Enabled).run.xml  g6-cli (--set-smart-volume-special-value Loud).run.xml  g6-cli (--set-smart-volume-special-value Night).run.xml  g6-cli (--set-smart-volume-value 0).run.xml  g6-cli (--set-smart-volume-value 100).run.xml  g6-cli (--set-smart-volume-value 50).run.xml  (+8 more)
(+99 files in other folders)
