#
# Build system
#
[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

#
# Project
#
[project]
name = "soundblaster-x-g6-cli"
version = "1.0.0"
#
dependencies = [
    "hidapi==0.14.0",
    "pyusb==1.3.1"
]
requires-python = ">=3.10"
#
authors = [
    { name = "Nils Skowasch", email = "nils_s89_dev@gmx.de" }
]
maintainers = [
    { name = "Nils Skowasch", email = "nils_s89_dev@gmx.de" }
]
#
description = "A CLI tool for controlling the SoundBlaster X G6"
readme = { file = "readme.md", content-type = "text/markdown" }
#
license = "GPL-2.0-only"
license-files = ["LICENSE"]
#
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
#
keywords = ["SoundBlaster X G6", "SoundBlaster X G6 CLI", "CLI"]
#
[project.urls]
Repository = "https://github.com/nils-skowasch/soundblaster-x-g6-cli"
#
[project.scripts]
soundblaster-x-g6-cli = "g6_cli:main"

#
# Tool: package-dir
#
[tool.setuptools.package-dir]
"" = "src"

#
# Tool: find
#
[tool.setuptools.packages.find]
where = ["src"]

#
# Tool: tox
#
[tool.tox]
requires = ["tox>=4.21"]
env_list = ["py312"]

[tool.tox.env_run_base]
description = "run tests"
deps = ["pytest>=9"]
commands = [
    ["pytest", "{posargs:tests}"],
]

[tool.tox.env.py312]
description = "Run tests under Python 3.12 installed with pyenv"
base_python = ["{env:HOME}/.pyenv/versions/3.12.3/bin/python"]
